# DPerX

./: .gitignore  CMakeLists.txt  DPerXVS.sln  DPerXVS.vcxproj  DPerXVS.vcxproj.filters  README.md  main.cpp  project.rc  resource.rc
.cache/clangd/index/: aimbot.cpp.32B95E6EEC682026.idx  aimbot.h.55B4CDBEFC8FBFC7.idx  cheat.h.028ABA0CF94BC950.idx  esp.cpp.E955510D6C01A1BC.idx  esp.h.2CF13534F550F37C.idx  game_info.hpp.432E5192CAACBFD1.idx  imconfig.h.3D470BBB5F322707.idx  imgui.cpp.11FB585148DDBDED.idx  imgui.h.80C520CB1DDD8036.idx  imgui_demo.cpp.522B7B7D6F6D47AC.idx  imgui_draw.cpp.6E6C3BC53741FB38.idx  imgui_impl_dx11.cpp.8D538058B7A9738C.idx  imgui_impl_dx11.h.19CD5A6D12901B0A.idx  imgui_impl_win32.cpp.F49EBE7707A85EE1.idx  imgui_impl_win32.h.04F87581DFFCD3AD.idx  imgui_internal.h.B67CE38778BA3CB9.idx  imgui_tables.cpp.FFDBD1E1D965BC16.idx  imgui_widgets.cpp.5C73EED8F28FCAC1.idx  imstb_rectpack.h.94A4B7B88A432F58.idx  imstb_textedit.h.E85E92A1C8E8BC05.idx  imstb_truetype.h.8F06628A7813ED17.idx  localplayer.cpp.D088D5912715DC54.idx  localplayer.h.3C0DC58A0A77131D.idx  main.cpp.8A693E0FCB66D161.idx  memory.h.A759577B1F23D779.idx  moves.cpp.C6684BD631E7C376.idx  moves.h.D3D754049FBDD03F.idx  offsets.hpp.C87582B4EC828E4C.idx  player.h.BAC79A9B5F2E67FE.idx  server.cpp.6D4D77336BD465D1.idx  (+9 more)
src/: aimbot.cpp  aimbot.h  cheat.h  esp.h  game_info.hpp  localplayer.cpp  localplayer.h  memory.h  moves.cpp  moves.h  offsets.cpp  offsets.hpp  player.h  server.cpp  server.h  signature.hpp  spinbot.cpp  spinbot.h  spoofer.cpp  spoofer.h  ui.cpp  ui.h  vector2.h
